Exporta portas do mongo

--- a/implementacao-ddd/docker-compose.yaml
+++ b/implementacao-ddd/docker-compose.yaml
@@ -29,6 +29,8 @@ services:
   notifications:
     container_name: gobarber-notifications
     image: mongo:4.4.3
+    ports:
+      - "27017:27017"
   
   # Redis
   cache:
