--- a/implementacao-sem-ddd/tsconfig.json
+++ b/implementacao-sem-ddd/tsconfig.json
@@ -23,6 +23,9 @@
       "@models/*": [
         "models/*"
       ],
+      "@schemas/*": [
+        "schemas/*"
+      ],
       "@repositories/*": [
         "repositories/*"
       ],
