--- a/implementacao-ddd/package.json
+++ b/implementacao-ddd/package.json
@@ -4,7 +4,7 @@
   "main": "index.js",
   "license": "MIT",
   "scripts": {
-    "build": "tsc",
+    "build": "tsc && tsc-alias",
     "dev:server": "ts-node-dev -r tsconfig-paths/register --inspect --transpile-only src/shared/infra/http/server.ts",
     "test": "jest --watchAll",
     "typeorm": "ts-node-dev -r tsconfig-paths/register ./node_modules/typeorm/cli.js"
@@ -16,6 +16,7 @@
     "@types/ioredis": "^4.17.4",
     "@types/jest": "^26.0.10",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/mime": "^2.0.3",
     "@types/mocha": "^8.0.3",
     "@types/mongodb": "^3.5.27",
     "@types/multer": "^1.4.3",
@@ -36,6 +37,7 @@
     "supertest": "^4.0.2",
     "ts-jest": "^26.2.0",
     "ts-node-dev": "^1.0.0-pre.44",
+    "tsc-alias": "^1.3.10",
     "tsconfig-paths": "^3.9.0",
     "typescript": "^3.8.3"
   },
@@ -52,7 +54,7 @@
     "handlebars": "^4.7.6",
     "ioredis": "^4.17.3",
     "jsonwebtoken": "^8.5.1",
-    "mime": "^2.4.6",
+    "mime": "^2.5.2",
     "mongodb": "^3.6.2",
     "multer": "^1.4.2",
     "nodemailer": "^6.4.11",
