--- a/implementacao-sem-ddd/tsconfig.json
+++ b/implementacao-sem-ddd/tsconfig.json
@@ -7,6 +7,7 @@
     "strict": true,
     "strictPropertyInitialization": false,
     "baseUrl": "./src",
+    "skipLibCheck": true,
     "paths": {
       "@config/*": [
         "config/*"
